.antlr/ElanParser.java
// Generated from c:/GitHub/StandaloneTSCompilerForElan/Elan.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ElanParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NL=1, SINGLE_LINE_COMMENT=2, COMMENT_MARKER=3, ABSTRACT=4, AND=5, AS=6, 
		ASSERT=7, CALL=8, CASE=9, CATCH=10, CLASS=11, CONSTANT=12, CONSTRUCTOR=13, 
		CURRY=14, DEFAULT=15, DIV=16, EACH=17, ELSE=18, END=19, ENUM=20, FOR=21, 
		FROM=22, FUNCTION=23, GLOBAL=24, IF=25, IMMUTABLE=26, IMPORT=27, IN=28, 
		INHERITS=29, INPUT=30, LAMBDA=31, LET=32, LIBRARY=33, MAIN=34, MOD=35, 
		NEW=36, NOT=37, OF=38, IS=39, OR=40, OUT=41, PACKAGE=42, PARTIAL=43, PRINT=44, 
		PRIVATE=45, PROCEDURE=46, PROPERTY=47, REPEAT=48, RETURN=49, SET=50, STEP=51, 
		SWITCH=52, SYSTEM=53, TEST=54, THIS=55, THROW=56, TO=57, TRY=58, VAR=59, 
		WHEN=60, WHILE=61, WITH=62, XOR=63, BOOL_VALUE=64, VALUE_TYPE=65, ARRAY=66, 
		LIST=67, DICTIONARY=68, ITERABLE=69, EQUALS=70, ARROW=71, OPEN_BRACE=72, 
		CLOSE_BRACE=73, OPEN_SQ_BRACKET=74, CLOSE_SQ_BRACKET=75, OPEN_BRACKET=76, 
		CLOSE_BRACKET=77, DOUBLE_DOT=78, DOT=79, COMMA=80, COLON=81, PLUS=82, 
		MINUS=83, MULT=84, DIVIDE=85, POWER=86, LT=87, GT=88, LE=89, GE=90, IS_NOT=91, 
		TYPENAME=92, IDENTIFIER=93, LITERAL_INTEGER=94, LITERAL_FLOAT=95, LITERAL_CHAR=96, 
		LITERAL_STRING=97, WHITESPACES=98, NEWLINE=99, WS=100;
	public static final int
		RULE_file = 0, RULE_importStatement = 1, RULE_namespace = 2, RULE_main = 3, 
		RULE_test = 4, RULE_statementBlock = 5, RULE_testStatements = 6, RULE_assert = 7, 
		RULE_callStatement = 8, RULE_throwException = 9, RULE_printStatement = 10, 
		RULE_varDef = 11, RULE_assignment = 12, RULE_inlineAsignment = 13, RULE_assignableValue = 14, 
		RULE_procedureCall = 15, RULE_functionCall = 16, RULE_systemCall = 17, 
		RULE_input = 18, RULE_argument = 19, RULE_argumentList = 20, RULE_procedureDef = 21, 
		RULE_procedureSignature = 22, RULE_procedureParameterList = 23, RULE_parameterList = 24, 
		RULE_parameter = 25, RULE_procedureParameter = 26, RULE_functionDef = 27, 
		RULE_functionSignature = 28, RULE_constantDef = 29, RULE_enumDef = 30, 
		RULE_enumType = 31, RULE_enumValue = 32, RULE_classDef = 33, RULE_mutableClass = 34, 
		RULE_abstractClass = 35, RULE_immutableClass = 36, RULE_abstractImmutableClass = 37, 
		RULE_inherits = 38, RULE_property = 39, RULE_constructor = 40, RULE_newInstance = 41, 
		RULE_withClause = 42, RULE_proceduralControlFlow = 43, RULE_if = 44, RULE_for = 45, 
		RULE_each = 46, RULE_while = 47, RULE_repeat = 48, RULE_try = 49, RULE_switch = 50, 
		RULE_case = 51, RULE_caseDefault = 52, RULE_expression = 53, RULE_bracketedExpression = 54, 
		RULE_ifExpression = 55, RULE_elseExpression = 56, RULE_lambda = 57, RULE_index = 58, 
		RULE_range = 59, RULE_value = 60, RULE_scopeQualifier = 61, RULE_literal = 62, 
		RULE_literalValue = 63, RULE_dataStructureDefinition = 64, RULE_literalDataStructure = 65, 
		RULE_tupleDefinition = 66, RULE_literalTuple = 67, RULE_deconstructedTuple = 68, 
		RULE_listDefinition = 69, RULE_literalList = 70, RULE_listDecomp = 71, 
		RULE_arrayDefinition = 72, RULE_dictionaryDefinition = 73, RULE_literalDictionary = 74, 
		RULE_kvp = 75, RULE_literalKvp = 76, RULE_unaryOp = 77, RULE_binaryOp = 78, 
		RULE_arithmeticOp = 79, RULE_logicalOp = 80, RULE_conditionalOp = 81, 
		RULE_type = 82, RULE_dataStructureType = 83, RULE_genericSpecifier = 84, 
		RULE_tupleType = 85, RULE_typeList = 86, RULE_funcType = 87;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "importStatement", "namespace", "main", "test", "statementBlock", 
			"testStatements", "assert", "callStatement", "throwException", "printStatement", 
			"varDef", "assignment", "inlineAsignment", "assignableValue", "procedureCall", 
			"functionCall", "systemCall", "input", "argument", "argumentList", "procedureDef", 
			"procedureSignature", "procedureParameterList", "parameterList", "parameter", 
			"procedureParameter", "functionDef", "functionSignature", "constantDef", 
			"enumDef", "enumType", "enumValue", "classDef", "mutableClass", "abstractClass", 
			"immutableClass", "abstractImmutableClass", "inherits", "property", "constructor", 
			"newInstance", "withClause", "proceduralControlFlow", "if", "for", "each", 
			"while", "repeat", "try", "switch", "case", "caseDefault", "expression", 
			"bracketedExpression", "ifExpression", "elseExpression", "lambda", "index", 
			"range", "value", "scopeQualifier", "literal", "literalValue", "dataStructureDefinition", 
			"literalDataStructure", "tupleDefinition", "literalTuple", "deconstructedTuple", 
			"listDefinition", "literalList", "listDecomp", "arrayDefinition", "dictionaryDefinition", 
			"literalDictionary", "kvp", "literalKvp", "unaryOp", "binaryOp", "arithmeticOp", 
			"logicalOp", "conditionalOp", "type", "dataStructureType", "genericSpecifier", 
			"tupleType", "typeList", "funcType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'#'", "'abstract'", "'and'", "'as'", "'assert'", "'call'", 
			"'case'", "'catch'", "'class'", "'constant'", "'constructor'", "'curry'", 
			"'default'", "'div'", "'each'", "'else'", "'end'", "'enum'", "'for'", 
			"'from'", "'function'", "'global'", "'if'", "'immutable'", "'import'", 
			"'in'", "'inherits'", "'input'", "'lambda'", "'let'", "'library'", "'main'", 
			"'mod'", "'new'", "'not'", "'of'", "'is'", "'or'", "'out'", "'package'", 
			"'partial'", "'print'", "'private'", "'procedure'", "'property'", "'repeat'", 
			"'return'", "'set'", "'step'", "'switch'", "'system'", "'test'", "'this'", 
			"'throw'", "'to'", "'try'", "'var'", "'when'", "'while'", "'with'", "'xor'", 
			null, null, "'Array'", "'List'", "'Dictionary'", "'Iter'", "'='", "'->'", 
			"'{'", "'}'", "'['", "']'", "'('", "')'", "'..'", "'.'", "','", "':'", 
			"'+'", "'-'", "'*'", "'/'", "'^'", "'<'", "'>'", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NL", "SINGLE_LINE_COMMENT", "COMMENT_MARKER", "ABSTRACT", "AND", 
			"AS", "ASSERT", "CALL", "CASE", "CATCH", "CLASS", "CONSTANT", "CONSTRUCTOR", 
			"CURRY", "DEFAULT", "DIV", "EACH", "ELSE", "END", "ENUM", "FOR", "FROM", 
			"FUNCTION", "GLOBAL", "IF", "IMMUTABLE", "IMPORT", "IN", "INHERITS", 
			"INPUT", "LAMBDA", "LET", "LIBRARY", "MAIN", "MOD", "NEW", "NOT", "OF", 
			"IS", "OR", "OUT", "PACKAGE", "PARTIAL", "PRINT", "PRIVATE", "PROCEDURE", 
			"PROPERTY", "REPEAT", "RETURN", "SET", "STEP", "SWITCH", "SYSTEM", "TEST", 
			"THIS", "THROW", "TO", "TRY", "VAR", "WHEN", "WHILE", "WITH", "XOR", 
			"BOOL_VALUE", "VALUE_TYPE", "ARRAY", "LIST", "DICTIONARY", "ITERABLE", 
			"EQUALS", "ARROW", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_SQ_BRACKET", "CLOSE_SQ_BRACKET", 
			"OPEN_BRACKET", "CLOSE_BRACKET", "DOUBLE_DOT", "DOT", "COMMA", "COLON", 
			"PLUS", "MINUS", "MULT", "DIVIDE", "POWER", "LT", "GT", "LE", "GE", "IS_NOT", 
			"TYPENAME", "IDENTIFIER", "LITERAL_INTEGER", "LITERAL_FLOAT", "LITERAL_CHAR", 
			"LITERAL_STRING", "WHITESPACES", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Elan.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ElanParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ElanParser.EOF, 0); }
		public List<MainContext> main() {
			return getRuleContexts(MainContext.class);
		}
		public MainContext main(int i) {
			return getRuleContext(MainContext.class,i);
		}
		public List<ProcedureDefContext> procedureDef() {
			return getRuleContexts(ProcedureDefContext.class);
		}
		public ProcedureDefContext procedureDef(int i) {
			return getRuleContext(ProcedureDefContext.class,i);
		}
		public List<FunctionDefContext> functionDef() {
			return getRuleContexts(FunctionDefContext.class);
		}
		public FunctionDefContext functionDef(int i) {
			return getRuleContext(FunctionDefContext.class,i);
		}
		public List<ConstantDefContext> constantDef() {
			return getRuleContexts(ConstantDefContext.class);
		}
		public ConstantDefContext constantDef(int i) {
			return getRuleContext(ConstantDefContext.class,i);
		}
		public List<EnumDefContext> enumDef() {
			return getRuleContexts(EnumDefContext.class);
		}
		public EnumDefContext enumDef(int i) {
			return getRuleContext(EnumDefContext.class,i);
		}
		public List<ClassDefContext> classDef() {
			return getRuleContexts(ClassDefContext.class);
		}
		public ClassDefContext classDef(int i) {
			return getRuleContext(ClassDefContext.class,i);
		}
		public List<TestContext> test() {
			return getRuleContexts(TestContext.class);
		}
		public TestContext test(int i) {
			return getRuleContext(TestContext.class,i);
		}
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(ElanParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ElanParser.NL, i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(184);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(176);
						main();
						}
						break;
					case 2:
						{
						setState(177);
						procedureDef();
						}
						break;
					case 3:
						{
						setState(178);
						functionDef();
						}
						break;
					case 4:
						{
						setState(179);
						constantDef();
						}
						break;
					case 5:
						{
						setState(180);
						enumDef();
						}
						break;
					case 6:
						{
						setState(181);
						classDef();
						}
						break;
					case 7:
						{
						setState(182);
						test();
						}
						break;
					case 8:
						{
						setState(183);
						importStatement();
						}
						break;
					}
					} 
				}
				setState(188);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(189);
				match(NL);
				}
				}
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(195);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ElanParser.IMPORT, 0); }
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).exitImportStatement(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(IMPORT);
			setState(198);
			namespace();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamespaceContext extends ParserRuleContext {
		public List<TerminalNode> TYPENAME() { return getTokens(ElanParser.TYPENAME); }
		public TerminalNode TYPENAME(int i) {
			return getToken(ElanParser.TYPENAME, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(ElanParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ElanParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(ElanParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(ElanParser.DOT, i);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).exitNamespace(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_namespace);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			_la = _input.LA(1);
			if ( !(_la==TYPENAME || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(205);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(201);
					match(DOT);
					setState(202);
					_la = _input.LA(1);
					if ( !(_la==TYPENAME || _la==IDENTIFIER) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(207);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(ElanParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ElanParser.NL, i);
		}
		public List<TerminalNode> MAIN() { return getTokens(ElanParser.MAIN); }
		public TerminalNode MAIN(int i) {
			return getToken(ElanParser.MAIN, i);
		}
		public StatementBlockContext statementBlock() {
			return getRuleContext(StatementBlockContext.class,0);
		}
		public TerminalNode END() { return getToken(ElanParser.END, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			match(NL);
			setState(209);
			match(MAIN);
			setState(210);
			statementBlock();
			setState(211);
			match(NL);
			setState(212);
			match(END);
			setState(213);
			match(MAIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TestContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(ElanParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ElanParser.NL, i);
		}
		public List<TerminalNode> TEST() { return getTokens(ElanParser.TEST); }
		public TerminalNode TEST(int i) {
			return getToken(ElanParser.TEST, i);
		}
		public TerminalNode IDENTIFIER() { return getToken(ElanParser.IDENTIFIER, 0); }
		public TestStatementsContext testStatements() {
			return getRuleContext(TestStatementsContext.class,0);
		}
		public TerminalNode END() { return getToken(ElanParser.END, 0); }
		public TestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).enterTest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).exitTest(this);
		}
	}

	public final TestContext test() throws RecognitionException {
		TestContext _localctx = new TestContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_test);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(215);
			match(NL);
			setState(216);
			match(TEST);
			setState(217);
			match(IDENTIFIER);
			setState(218);
			testStatements();
			setState(219);
			match(NL);
			setState(220);
			match(END);
			setState(221);
			match(TEST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementBlockContext extends ParserRuleContext {
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<ProceduralControlFlowContext> proceduralControlFlow() {
			return getRuleContexts(ProceduralControlFlowContext.class);
		}
		public ProceduralControlFlowContext proceduralControlFlow(int i) {
			return getRuleContext(ProceduralControlFlowContext.class,i);
		}
		public List<CallStatementContext> callStatement() {
			return getRuleContexts(CallStatementContext.class);
		}
		public CallStatementContext callStatement(int i) {
			return getRuleContext(CallStatementContext.class,i);
		}
		public List<ThrowExceptionContext> throwException() {
			return getRuleContexts(ThrowExceptionContext.class);
		}
		public ThrowExceptionContext throwException(int i) {
			return getRuleContext(ThrowExceptionContext.class,i);
		}
		public List<PrintStatementContext> printStatement() {
			return getRuleContexts(PrintStatementContext.class);
		}
		public PrintStatementContext printStatement(int i) {
			return getRuleContext(PrintStatementContext.class,i);
		}
		public StatementBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).enterStatementBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElanListener ) ((ElanListener)listener).exitStatementBlock(this);
		}
	}
